Add api for getting weather

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
-Application/Pods/
-Application/SwiftUI-Weather.xcodeproj/xcuserdata
-Application/SwiftUI-Weather.xcworkspace/xcuserdata
+SwiftUI-Weather/SwiftUI-Weather.xcodeproj/xcuserdata
+SwiftUI-Weather/SwiftUI-Weather.xcodeproj/project.xcworkspace/xcuserdata
